project(amdtest LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 20)
if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-switch -Wno-reorder-init-list")
else()
endif()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_CRT_SECURE_NO_WARNINGS -D_CRT_RAND_S -DNOMINMAX -D__PRETTY_FUNCTION__=__FUNCTION__ -D_WIN32 -D_WIN64 -D_AMD64_ -DWIN32_LEAN_AND_MEAN")
set(PLATFORM_LIBRARIES ws2_32.lib d3d12.lib d3dcompiler.lib dxgi.lib dxguid.lib directml.lib dcomp.lib strmiids.lib mfplat.lib mf.lib mfreadwrite.lib mfuuid.lib shlwapi.lib)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/win32 ${CMAKE_CURRENT_SOURCE_DIR}/directx)
add_executable(amdtest1 amdtest1.cpp decodinglayer.cpp win32decodinglayer.cpp hevcparser.cpp h264_bit_reader.cpp)
target_link_libraries(amdtest1 ${PLATFORM_LIBRARIES} ${GPU_LIBRARIES})
